@@ -1,0 +1,2 @@
+#define BITS 64
+#include "riscv_corenote.c"
